syntax = "proto3";

option go_package = "./pb";

enum HandleId{
  HI_None = 0;
  HI_UserLoginQuery = 1;
}

enum HandleCode{
  HC_None = 0;
  HC_StatusOk = 200;
  HC_StatusNotFound = 404;
  HC_StatusServerInterval = 500;
}

enum DataType{
  DT_Proto = 0; //protobuf
  DT_Json = 1; //json
}